# tiny-gpt

./: .gitignore  README.md  api.py  build_web_model.py  pyproject.toml  requirements.txt  train.py
reports/: metrics.json  sample.txt
src/minigpt/: __init__.py  data.py  model.py
tests/: test_api.py  test_minigpt.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web_model/: gpt.pt
