[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minigpt"
version = "1.0.0"
description = "A tiny char-level GPT (self-attention, positional encoding) from scratch in PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "smafnan", email = "smafnan5@gmail.com" }]
dependencies = ["torch>=2.1", "numpy>=1.24", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
